<resources>
    <string name="app_name">Beacon Scanner</string>
    <string name="settings">Settings</string>
    <string name="enable">Enable</string>
    <string name="enable_permission_from_settings">Please enable location permission from settings to use the bluetooth</string>
    <string name="we_do_need_this_permission_to_scan_for_beacons">We need this permission to scan for beacons</string>
    <string name="bluetooth_disabled">Bluetooth disabled</string>
    <string name="turning_bluetooth_off">Turning bluetooth off …</string>
    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="turning_bluetooth_on">Turning bluetooth on</string>
    <string name="bluetooth_state">Bluetooth state</string>
    <string name="scanning_for_beacons">Scanning </string>
    <string name="error_while_scanning_for_beacons">Error while scanning for beacons</string>
    <string name="touch_to_retry">Touch to retry</string>
    <string name="eddystone">Eddystone</string>
    <string name="altbeacon">ALTbeacon</string>
    <string name="ibeacon">iBeacon</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="rssi">RSSI</string>
    <string name="tx">TX</string>
    <string name="dbm">dBm</string>
    <string name="last_seen">Last seen</string>
    <string name="distance">Distance</string>
    <string name="metters_abbreviation">m</string>
    <string name="uuid">uuid </string>
    <string name="immediate">Immediate</string>
    <string name="near">Near</string>
    <string name="far">Far</string>
    <string name="unknown">Unknown</string>
    <string name="instance_id">InstanceID</string>
    <string name="namespace_id">NamespaceID</string>
    <string name="uptime">Uptime</string>
    <string name="eddystone_uid">Eddystone-UID</string>
    <string name="celcius_abbreviation">°C</string>
    <string name="tlm_data">TLM data</string>
    <string name="plus_tlm"><![CDATA[&TLM]]></string>
    <string name="url">URL</string>
    <string name="eddystone_url">Eddystone-URL</string>
    <string name="millivolts_abbreviation">mV</string>
    <string name="battery">Battery</string>
    <string name="pdu_count">Pdu sent</string>
    <string name="seconds_abbreviation">s</string>
    <string name="temperature">Temperature</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="clear">Clear</string>
    <string name="no_scanned_beacons_yet">No scanned beacons yet!</string>
    <string name="empty_state_content">To start scanning for nearby beacons just press the scan button. You\'ll see the scan results appear here.</string>
    <string name="enable_bluetooth_to_start_scanning">Enable bluetooth to start scanning</string>
    <string name="bluetooth_control">Bluetooth control</string>
    <string name="feature_bluetooth_content">Make sure the bluetooth is enabled before you start scanning</string>
    <string name="feature_scan_title">See what\'s around</string>
    <string name="feature_scan_content">Tap to start and stop scanning for nearby beacons!</string>
    <string name="feature_clear_title">Need a fresh start ?</string>
    <string name="feature_clear_content">Hit this to clear your previous scans</string>
    <string name="scanner">Scanner</string>
    <string name="feedback">Feedback</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="activate_tutorial">Activate the tutorial</string>
    <string name="need_some_hints">Need some hints on how to use the app ?</string>
    <string name="tutorial">Tutorial</string>
    <string name="feature_request">Feature request</string>
    <string name="ask_for_a_feature">You think something is missing ?</string>
    <string name="enjoying_the_app_let_us_know">Enjoying the app ? Let people know!</string>
    <string name="start_scanning_when_app_opens">Start scanning when the app opens</string>
    <string name="send_email">Send email</string>
    <string name="the_tutorial_has_been_reset">The tutorial has been reset</string>
    <string name="made_with">Made with</string>
    <string name="by_nicolas_bridoux">by Nicolas Bridoux</string>
    <string name="delete_all">Delete all</string>
    <string name="are_you_sure_delete_all">Are you sure you want to delete all the previous scans ?</string>

    <!-- Play Icon -->
    <string name="play_icon_upper_path_data">M 44 32 L 44 64 L 100 64 L 100 64 Z</string>
    <string name="play_icon_bottom_path_data">M 44 96 L 44 64 L 100 64 L 100 64 Z</string>

    <!-- Pause Icon -->
    <string name="pause_icon_upper_path_data">M 32 40 L 32 56  L 96 56 L 96 40 Z</string>
    <string name="pause_icon_bottom_path_data">M 32 88 L 32 72 L 96 72 L 96 88 Z</string>

    <!-- Stop Icon -->
    <string name="stop_icon_upper_path_data">M 32 32 L 32 64 L 96 64 L 96 32 Z</string>
    <string name="stop_icon_bottom_path_data">M 32 96 L 32 64 L 96 64 L 96 96 Z</string>

    <!-- Groups -->
    <string name="play_icon_group_top">upperpart</string>
    <string name="play_icon_group_bottom">bottompart</string>
    <string name="play_icon_group_parts">parts</string>

    <!-- Path Name -->
    <string name="play_icon_top_path_name">upper</string>
    <string name="play_icon_bottom_path_name">bottom</string>

    <!-- Waves -->
    <string name="wave_1_path_data">M 17.502 3.5 L 14.701 3.5 C 10.99 3.5 8 5.675 8 9.455 L 8 127.75 L 24 127.75 L 24 9.455 C 24 5.675 21.213 3.5 17.502 3.5 Z</string>
    <string name="wave_2_path_data">M 49.502 3.5 L 46.701 3.5 C 42.99 3.5 40 5.675 40 9.455 L 40 127.75 L 56 127.75 L 56 9.455 C 56 5.675 53.213 3.5 49.502 3.5 Z</string>
    <string name="wave_3_path_data">M 81.502 3.5 L 78.701 3.5 C 74.99 3.5 72 5.675 72 9.455 L 72 127.75 L 88 127.75 L 88 9.455 C 88 5.675 85.213 3.5 81.502 3.5 Z</string>
    <string name="wave_4_path_data">M 113.502 3.5 L 110.701 3.5 C 106.99 3.5 104 5.675 104 9.455 L 104 127.75 L 120 127.75 L 120 9.455 C 120 5.675 117.213 3.5 113.502 3.5 Z</string>

    <string name="playing_identifier_group_wave_1">wave1</string>
    <string name="playing_identifier_group_wave_2">wave2</string>
    <string name="playing_identifier_group_wave_3">wave3</string>
    <string name="playing_identifier_group_wave_4">wave4</string>
    <string name="delay_in_between_each_scan">Delay in between each scan</string>
    <string name="choose">Choose</string>
    <string name="logging">Logging</string>
    <string name="enable_logging">Enable logging</string>
    <string name="logging_endpoint">Logging endpoint</string>
    <string name="device_name">Device name</string>
    <string name="logging_frequency">Logging frequency</string>
    <string name="not_defined">Not defined</string>
    <string name="logging_description">If you choose to enable the logging a POST http request will be made to the specified endpoint at the logging frequency. The data will be send as a JSON object in the body of the request. If provided, a device name will be included in the http headers so you know which device is sending the logs. Be aware this will drain the battery a lot. </string>
    <string name="logging_error_please_check">The logging request didn\'t work. Please check the endpoint and your connectivity.</string>
    <string name="positive_btn_step_1">Yes!</string>
    <string name="enjoying_the_app">Enjoying the app?</string>
    <string name="negative_btn_step_1">Not really</string>
    <string name="how_about_a_rating_on_the_play_store">How about a rating on the Play Store, then?</string>
    <string name="positive_btn_step_2">Ok, sure</string>
    <string name="negative_btn_step_2">No, thanks</string>
    <string name="prevent_sleep_while_scanning">Prevent device sleep while scanning</string>
</resources>
