<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.beaconList.BeaconListActivity">

    <item
        android:icon="@drawable/ic_delete_sweep_24px"
        android:id="@+id/action_clear"
        android:title="@string/clear"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom"
        />
    <item
        android:icon="@drawable/ic_round_bluetooth_24px"
        android:id="@+id/action_bluetooth"
        android:title="@string/bluetooth_state"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom"
        />
    <item
        android:icon="@drawable/ic_outline_settings_24px"
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom"
        />
</menu>