<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/rating_background">

    <!-- Step 1 -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/rating_step_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginEnd="72dp"
        tools:visibility="gone"
        >

        <TextView
            android:id="@+id/step_1_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/enjoying_the_app"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/positive_btn_step_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/step_1_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/negative_btn_step_1"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/positive_btn_step_1"
            />

        <Button
            android:id="@+id/negative_btn_step_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/step_1_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/positive_btn_step_1"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/negative_btn_step_1"
            />

    </android.support.constraint.ConstraintLayout>

    <!-- Step 2 -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/rating_step_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginEnd="72dp"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <TextView
            android:id="@+id/step_2_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/how_about_a_rating_on_the_play_store"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/positive_btn_step_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/step_2_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/negative_btn_step_2"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/positive_btn_step_2"
            />

        <Button
            android:id="@+id/negative_btn_step_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/step_2_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/positive_btn_step_2"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/negative_btn_step_2"
            />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>