<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/bgMoreInfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- RSSI -->
    <TextView
        android:text="@string/rssi"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/rssi"
        tools:text="-69"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout3" />

    <TextView
        android:text="@string/dbm"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintLeft_toRightOf="@+id/rssi"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rssi" />

    <!-- TX -->
    <TextView
        android:text="@string/tx"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tx_title"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tx"
        tools:text="-67"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tx_title"
        app:layout_constraintLeft_toLeftOf="@+id/tx_title" />

    <TextView
        android:text="@string/dbm"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tx"
        app:layout_constraintBottom_toBottomOf="@+id/tx"
        app:layout_constraintLeft_toRightOf="@+id/tx"
        android:layout_marginStart="8dp" />

    <!-- TLM data -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/tlm_data"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@+id/rssi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <TextView
            android:text="@string/tlm_data"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/textView18"
            android:layout_marginTop="16dp" />

        <!-- Battery-->
        <TextView
            android:text="@string/battery"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />
        <TextView
            android:id="@+id/battery"
            tools:text="500"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintLeft_toLeftOf="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />
        <TextView
            android:text="@string/millivolts_abbreviation"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintLeft_toRightOf="@+id/battery"
            app:layout_constraintBottom_toBottomOf="@+id/battery"
            android:id="@+id/textView11" />

        <!-- ticks-->
        <TextView
            android:text="@string/pdu_count"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.27"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />
        <TextView
            android:id="@+id/ticks"
            tools:text="2.1k"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintLeft_toLeftOf="@+id/textView12" />

        <!-- Uptime -->
        <TextView
            android:text="@string/uptime"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            android:id="@+id/textView13"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp" />
        <TextView
            android:id="@+id/uptime"
            tools:text="66k"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintLeft_toLeftOf="@+id/textView13"
            android:layout_marginTop="4dp" />
        <TextView
            android:text="@string/seconds_abbreviation"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintLeft_toRightOf="@+id/uptime"
            app:layout_constraintBottom_toBottomOf="@+id/uptime"
            android:id="@+id/textView14" />

        <!--Temperature-->
        <TextView
            android:text="@string/temperature"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/textView13"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.83"
            android:layout_marginStart="16dp" />
        <TextView
            android:id="@+id/temperature"
            tools:text="22.3"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:layout_constraintLeft_toLeftOf="@+id/textView15" />
        <TextView
            android:text="@string/celcius_abbreviation"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/temperature"
            android:layout_marginStart="4dp"
            app:layout_constraintLeft_toRightOf="@+id/temperature" />
    </android.support.constraint.ConstraintLayout>

    <!--Manufacturer -->
    <TextView
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer"
        app:layout_constraintTop_toBottomOf="@+id/tlm_data"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/textView16"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/manufacturer"
        tools:text="0x0118"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        app:layout_constraintBottom_toBottomOf="@+id/textView16" />

    <!--Last seen -->
    <TextView
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_seen"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintLeft_toLeftOf="@+id/textView16"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:id="@+id/textView17" />
    <TextView
        android:id="@+id/last_seen"
        tools:text="01/10/2016 12:32:34"
        android:textSize="12sp"
        android:textStyle="italic|bold"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/textView17"
        app:layout_constraintBottom_toBottomOf="@+id/textView17" />


</android.support.constraint.ConstraintLayout>